event page files fix styling on mobile devices

--- a/src/app/content/events/components/event-view/event-view.component.scss
+++ b/src/app/content/events/components/event-view/event-view.component.scss
@@ -22,7 +22,9 @@
 
     a {
         margin-right: 12px;
+        margin-bottom: 6px;
         color: unset;
         text-decoration: none;
+        display: inline-block;
     }
 }
